changed padding on current projects to fix vertical spacing on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,6 +180,14 @@ a:after {
 	padding-bottom: 50px;
 }
 
+.pbo {
+    padding-bottom: 50px;
+}
+
+.pto {
+    padding-top: 50px;
+}
+
 
 /* +++++ WRAP SECTIONS +++++ */
 
